--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 			step="1" oninput="outputUpdateIlgis(value)">
 		<output for="ilgis" id="IlgisVal">20mm</output>
 		<button onclick="generateGraph()">Generuoti</button>
+		<br/>
+		Pasirinkite medžiagą
+		<select id="item" onchange="ForSelect()">
+			<option value="1" id="si"> Silicis </option>
+			<option value="2" id="ge" selected> Germanis </option>
+		</select>
 	</div>
 	<div>
 		<label for="DJP">Draustinės juostos plotis</label>
