--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Medžiagų mokslas</title>
 	<meta charset="UTF-8">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript">
 	</script>
 	<script src="libraries/RGraph.common.core.js" ></script>
